resources/monitoring/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30001
      protocol: TCP
  selector:
    app.kubernetes.io/name: grafana
